--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@google-cloud/pubsub": "^3.1.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/styles": "^5.9.0",
@@ -12,13 +13,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "amazon-cognito-identity-js": "^5.2.10",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
-    "amazon-cognito-identity-js": "^5.2.10",
+    "express": "4.16.2",
     "firebase": "^9.9.0",
+    "material-ui-notifications": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.2",
