--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "material-ui-notifications": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-notification": "^6.8.5",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
