--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-amplify": "^4.3.27",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "create-react-class": "^15.7.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.9.0",
     "material-ui-notifications": "^0.1.4",
